// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField Component matches the snapshot with error 1`] = `
<DocumentFragment>
  <div
    class="sc-eaUbBy fdTNpf"
  >
    <label
      class="sc-KXCwU cDImbL"
      for="test-input"
    >
      Test Label
    </label>
    <input
      class="sc-gaZyOd dLOVyS"
      id="test-input"
      placeholder=""
      type="text"
      value="Test Value"
    />
    <span
      class="sc-dDvxFM dxUBU"
    >
      This field is required
    </span>
  </div>
</DocumentFragment>
`;

exports[`InputField Component matches the snapshot without error 1`] = `
<DocumentFragment>
  <div
    class="sc-eaUbBy fdTNpf"
  >
    <label
      class="sc-KXCwU cDImbL"
      for="test-input"
    >
      Test Label
    </label>
    <input
      class="sc-gaZyOd liDFrS"
      id="test-input"
      placeholder="Enter text"
      type="text"
      value="Test Value"
    />
  </div>
</DocumentFragment>
`;
